--- a/GeneticAlgorithmLib.cabal
+++ b/GeneticAlgorithmLib.cabal
@@ -6,7 +6,9 @@ cabal-version: 1.12
 
 name:           GeneticAlgorithmLib
 version:        0.1.0.0
+synopsis:       Genetic algorithm library in pure Haskell
 description:    Please see the README on GitHub at <https://github.com/dwwescalelol/GeneticAlgorithmLib#readme>
+category:       AI
 homepage:       https://github.com/dwwescalelol/GeneticAlgorithmLib#readme
 bug-reports:    https://github.com/dwwescalelol/GeneticAlgorithmLib/issues
 author:         Zaz Abdallah
