--- a/GeneticAlgorithmLib.cabal
+++ b/GeneticAlgorithmLib.cabal
@@ -42,7 +42,7 @@ library
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       base >=4.7 && <5
-    , random
+    , random ==1.2.*
   default-language: Haskell2010
 
 test-suite GeneticAlgorithmLib-test
@@ -57,5 +57,5 @@ test-suite GeneticAlgorithmLib-test
   build-depends:
       GeneticAlgorithmLib
     , base >=4.7 && <5
-    , random
+    , random ==1.2.*
   default-language: Haskell2010
