--- a/package.yaml
+++ b/package.yaml
@@ -18,10 +18,9 @@ category: AI
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
 description: Please see the README on GitHub at <https://github.com/dwwescalelol/GeneticAlgorithmLib#readme>
-
 dependencies:
   - base >= 4.7 && < 5
-  - random
+  - random >= 1.2 && < 1.3
 
 ghc-options:
   - -Wall
